<resources>

    <!-- @author Shamil Gradov -->

    <!-- Branding-->
    <string name="app_name">Healthy Fatness</string>
    <string name="app_logo">App Logo</string>

    <!-- Dashboard -->
    <string name="kcal">KCAL ÜBRIG/TAG</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Einstellungen</string>


    <!-- Preference Titles -->
    <string name="setting_user_category">Benutzereinstellungen</string>

    <!-- Messages Preferences -->
    <string name="user_height">Körpergröße anpassen in cm</string>
    <string name="user_weight">Aktuelles Gewicht anpassen in kg</string>
    <string name="user_age">Alter anpassen</string>
    <string name="user_gender">Geschlecht anpassen</string>
    <string name="user_target_weight">Zielgewicht anpassen in kg</string>
    <string name="user_deadline">Deadline anpassen</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="checked">Checked</string>
    <string name="unchecked">Unchecked</string>

    <!-- Gewicht Allgemein -->
    <string name="inputweight">Eingabe…</string>
    <string name="weight">Bitte gib dein Gewicht in kg an</string>
    <string name="kilogramm">KG</string>
    <string name="pounds">LBS</string>

    <!-- Aktuelles Gewicht -->
    <string name="currentWeight">"Was ist Ihr aktuelles Gewicht?"</string>
    <string name="guessWeight">Sie können auch Ihr Gewicht schätzen und es später bei den Einstellungen verändern</string>
    <string name="weiter">Weiter</string>

    <!-- Zielgewicht -->
    <string name="desiredWeight">Was ist Ihr Wunsch Gewicht?</string>
    <string name="gainWeight">Bitte gib an wie viel genau du Zunehmen willst, damit wir dir einen Plan erstellen können."</string>

    <!-- Welcome Screen -->
    <string name="healthy">HEALTHY</string>
    <string name="fatness">FATNESS</string>

    <!-- Geschlecht wählen -->
    <string name="gender">Bitte wähle dein Geschlecht</string>
    <string name="mann">männlich</string>
    <string name="frau">weiblich</string>

    <!-- Körpergröße -->
    <string name="height">Wie groß bist du?</string>
    <string name="height2">Bitte gib deine Größe in cm ein:</string>
    <string name="heightautofill">Größe eingeben</string>
    <string name="heightImage">Height Image</string>

    <!-- Alter -->
    <string name="age">Wie alt bist du?</string>
    <string name="ageinput">Bitte gib hier dein Alter an</string>

    <!-- Avatar Description -->
    <string name="maleAvatar">male Avatar</string>
    <string name="femaleAvatar">female Avatar</string>

    <!-- Zeitziel -->
    <string name="timegoal">Bitte gib an, bis wann du das Ziel erreichen willst.</string>
    <string name="calendar">SET DATE</string>

    <!-- Input Fehlermeldungen -->
    <string name="error_number">Bitte gib eine Zahl ein.</string>
    <string name="error_gender">Bitte wähle dein Geschlecht.</string>

    <string name="error_weight_to_low">Dein aktuelles Gewicht sollte wenigstens 2kg sein.</string>
    <string name="error_weight_to_high">Dein aktuelles Gewicht sollte nicht höher als 500kg sein.</string>

    <string name="error_weight_beyond_target_weight">Wenn du dein Zielgewicht überschritten hast, solltest du zunächst deine eigenen Gewichtsanforderungen nach oben schrauben! ;p</string>
    <string name="error_target_weight_below_weight">Dein Zielgewicht kann nicht unter deinem aktuellen Gewicht liegen.</string>

    <string name="error_no_gender_found">Es scheint ein Fehler aufgetreten zu sein, da wir dieses Geschlecht nicht zuordnen konnten.</string>

    <string name="error_targetweight_to_low">Dein Zielgewicht sollte wenigstens 5kg sein.</string>
    <string name="error_targetweight_to_high">Dein Zielgewicht sollte nicht höher als 500kg sein.</string>

    <string name="error_height_to_low">Du wirst wohl wenigstens 50cm groß sein.</string>
    <string name="error_height_to_high">Du wirst wohl nicht höher als 300cm groß sein.</string>

    <string name="error_age_to_high">Dein Alter wird wohl nicht höher als 150 sein.</string>

    <string name="error_deadline_wrong_format">Wir konnten deiner Eingabe keinen Zeitpunkt entnehmen. Bitte gib das Datum im Format dd.MM.yyyy ein.</string>
    <string name="error_deadline_before_tomorrow">Dein Zieldatum sollten frühstens morgen gesetzt sein.</string>
    <string name="error_deadline_to_high">Meinst du nicht, dass du dir ein naheliegenderes Ziel setzen solltest?</string>

    <!-- Food Items -->
    <string name="empty">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="food_name">Food Name</string>
    <string name="food_details">Food Details</string>
    <string name="twohundred">200</string>
    <string name="autofill_food">default value</string>
    <string name="ingredients">Zutaten</string>
    <string name="steps">Arbeitsschritte</string>
    <string name="calories">Kalorien</string>
    <string name="nahrungsmittel">Nahrungsmittel</string>
    <string name="Rezepte">Rezepte</string>
    <string name="gprostueck">Gramm / Stück</string>

    <!-- Miscellaneous -->
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
