<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_user_category">

        <EditTextPreference
            app:key="userHeight"
            app:title="@string/user_height"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="userWeight"
            app:title="@string/user_weight"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="userAge"
            app:title="@string/user_age"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="userGender"
            app:title="@string/user_gender"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="userTargetWeight"
            app:title="@string/user_target_weight"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="userDeadline"
            app:title="@string/user_deadline"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
