<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/frageNachAktuellemGewicht"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/currentWeight"
        android:textAlignment="textStart"
        android:textColor="@color/textWhite"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/plainTextGewicht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plainTextIdle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="260dp"
        android:text="@string/weight"
        android:textColor="@color/textWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainTextIdle" />

    <TextView
        android:id="@+id/plainTextIdle"
        android:layout_width="337dp"
        android:layout_height="83dp"
        android:layout_below="@+id/frageNachAktuellemGewicht"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="66dp"
        android:text="@string/guessWeight"
        android:textColor="@color/textWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frageNachAktuellemGewicht" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plainTextGewicht"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:autofillHints="Bitte geben Sie ihr Gewicht ein"
        android:backgroundTint="@color/textWhite"
        android:hint="@string/inputweight"
        android:inputType="number"
        android:textColor="@color/textWhite"
        app:layout_constraintEnd_toStartOf="@+id/buttonlb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainTextGewicht" />

    <Button
        android:id="@+id/buttonkg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/kilogramm"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/textWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonlb"
        app:layout_constraintTop_toBottomOf="@+id/plainTextGewicht" />

    <Button
        android:id="@+id/buttonlb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/pounds"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/textWhite"
        app:layout_constraintEnd_toStartOf="@+id/buttonkg"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/plainTextGewicht" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="253dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorButton"
        android:text="@string/weiter"
        android:textColor="@color/textWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonkg" />


</androidx.constraintlayout.widget.ConstraintLayout>