<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome2"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/frageNachAktuellemGewicht"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bernierregularfont"
        android:text="@string/currentWeight"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/plainTextGewicht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plainTextIdle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bernierregularfont"
        android:text="@string/weight"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainTextIdle" />

    <TextView
        android:id="@+id/plainTextIdle"
        android:layout_width="337dp"
        android:layout_height="83dp"
        android:layout_below="@+id/frageNachAktuellemGewicht"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="66dp"
        android:fontFamily="@font/bernierregularfont"
        android:text="@string/guessWeight"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frageNachAktuellemGewicht" />


    <EditText
        android:id="@+id/edit_currentWeightNumber"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plainTextGewicht"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:autofillHints="Bitte geben Sie ihr Gewicht ein"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/bernierregularfont"
        android:hint="@string/inputweight"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainTextGewicht" />


    <Button
        android:id="@+id/btn_confirmCurrentWeight"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_currentWeightNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>