<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome2"
    tools:context=".activities.DashboardActivity">


    <TextView
        android:id="@+id/frageNachAktuellemGewicht"
        android:layout_width="@dimen/margin_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_normal"
        android:fontFamily="@font/bernierregularfont"
        android:text="@string/desiredWeight"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize_biggest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/plainTextGewicht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plainTextIdle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_bigger"
        android:fontFamily="@font/bernierregularfont"
        android:text="@string/weight"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize_sizeable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainTextIdle" />

    <TextView
        android:id="@+id/plainTextIdle"
        android:layout_width="@dimen/margin_zero"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frageNachAktuellemGewicht"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:fontFamily="@font/bernierregularfont"
        android:text="@string/gainWeight"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frageNachAktuellemGewicht" />

    <EditText
        android:id="@+id/edit_targetWeightNumber"
        android:layout_width="@dimen/margin_width_extra1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plainTextGewicht"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_bigger"
        android:autofillHints="Bitte geben Sie ihr Gewicht ein"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/bernierregularfont"
        android:hint="@string/inputweight"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainTextGewicht" />


    <Button
        android:id="@+id/btn_confirmTargetWeight"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_normal"
        android:fontFamily="@font/bernierregular"
        android:textSize="@dimen/textSize_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_targetWeightNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>